Add Assets/Atlassian Icon.svg

--- a/index.html
+++ b/index.html
@@ -13,25 +13,35 @@
 <body>
    
 
-        <p>Commune</p>
+        <p class="brand">Commune</p>
 
-    <div>
-        <p>Features</p>
-        <p>Affiliates</p>
-        <p>Pricing</p>
-        <p>Communities</p>
-        <p>Join Waitlist</p>
-    </div>
+    
+        <p class="menu">Features</p>
+        <p class="menu">Affiliates</p>
+        <p class="menu">Pricing</p>
+        <p class="menu">Communities</p>
+        <button class="menu">Join Waitlist</button>
+
  
-    <p>We are now allowing early-access for users. Learn more.</p>
+    <br>
+
+    <button class="learn">We are now allowing early-access for users. Learn more.</button>
 
     <h1>Build a highly engaged community with no effort.</h1>
+
+    <!--Trying to place the phone illustration here to flexbox it with CSS to appear on the right of the screen-->
+
+    <img src="https://drive.google.com/file/d/11hwQ34b6hUHqLBUcpaLJTMdpx1Y-a-8q/view?usp=sharing">
+
+    <!--Description about what Commune does-->
 
     <p class="about">Commune offers the tools you need to build a highly engaged community with little to no effort. Simply setup your Commune workspace, and manage everything from members to content from one central dashboard.</p>
 
     <input type="email" placeholder="Enter your e-mail address">
-    <p>Join Waitlist</p>
+    <button>Join Waitlist</button>
     <p>Used by these companies:</p>
+
+    <!--Everything after this line is SVG code for image icons.-->
 
     <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g opacity="0.2">
