--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
     <!--Trying to place the phone illustration here to flexbox it with CSS to appear on the right of the screen-->
     
-        <blockquote class="about">Commune offers the tools you need to build 
+        <p class="about">Commune offers the tools you need to build 
         a highly engaged community 
-        with little to no effort. 
+        with little to no <br> effort. 
         Simply setup your Commune workspace, 
-        and manage everything from members to 
+        and manage everything from members to <br> 
         content from one central dashboard.
-        </blockquote>
-        <input type="email" placeholder="Enter your e-mail address">
-        <button>Join Waitlist</button>
+        </p>
+        <input class="email" type="email" placeholder="Enter your e-mail address">
+        <button class="join" >Join Waitlist</button>
     </div>
     
 
