--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!--font families below-->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <title>Landing Page - Desktop View</title>
@@ -63,7 +61,7 @@
     </div>
 
 
-    <img class="picture" src="Assets/Illustration.png" width="300px" height="400">
+    <img class="picture" src="Assets/Illustration.png" width="350px" height="400px">
 
 
 
