--- a/index.html
+++ b/index.html
@@ -36,48 +36,51 @@
           fill="#372865"
         />
       </svg>
-
-      <ul id="links">
-        <li>Features</li>
-        <li>Affiliates</li>
-        <li>Pricing</li>
-        <li>Communities</li>
-      </ul>
-      <button>Join Waitlist</button>
+      <div id="links">
+        <ul>
+          <li>Features</li>
+          <li>Affiliates</li>
+          <li>Pricing</li>
+          <li>Communities</li>
+        </ul>
+      </div>
+      <button class="nav-button">Join Waitlist</button>
     </nav>
 
     <div class="hero">
-      <button class="cta">
-        We are now allowing early-access for users.
-        <a href="assets/Logo.svg"> <b>Learn More.</b> </a>
-      </button>
-      <h1>
-        Build a highly engaged <br />
-        community with no effort.
-      </h1>
-      <!--Description about what Commune does-->
-      <p class="about">
-        Commune offers the tools you need to build a highly engaged community
-        with little to no <br />
-        effort. Simply setup your Commune workspace, and manage everything from
-        members to <br />
-        content from one central dashboard.
-      </p>
-      <input
-        class="email"
-        type="email"
-        placeholder="Enter your e-mail address"
+      <div class="hero-info">
+        <button class="cta">
+          We are now allowing early-access for users.
+          <a href="assets/Logo.svg"> <b>Learn More.</b> </a>
+        </button>
+
+        <h1>
+          Build a highly engaged <br />
+          community with no effort.
+        </h1>
+        <!--Description about what Commune does-->
+        <p class="about">
+          Commune offers the tools you need to build a highly engaged community
+          with little to no <br />
+          effort. Simply setup your Commune workspace, and manage everything
+          from members to <br />
+          content from one central dashboard.
+        </p>
+        <input
+          class="email"
+          type="email"
+          placeholder="Enter your e-mail address"
+        />
+        <button class="join">Join Waitlist</button>
+      </div>
+
+      <img
+        class="picture"
+        src="Assets/Illustration.png"
+        width="350px"
+        height="400px"
       />
-
-      <button class="join">Join Waitlist</button>
     </div>
-
-    <img
-      class="picture"
-      src="Assets/Illustration.png"
-      width="350px"
-      height="400px"
-    />
 
     <p class="partners">Used by these companies:</p>
     <!-- TODO: take off this breakpoint -->
