--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           fill="#372865"
         />
       </svg>
-      <div id="links">
+      <div class="links">
         <ul>
           <li>Features</li>
           <li>Affiliates</li>
           <li>Pricing</li>
           <li>Communities</li>
+          <button class="nav-button">Join Waitlist</button>
         </ul>
       </div>
-      <button class="nav-button">Join Waitlist</button>
     </nav>
 
     <div class="hero">
