--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta lang="en" />
@@ -18,7 +18,6 @@
 
   <body>
     <nav>
-      <!--The commune logo top left corner-->
       <svg
         class="logo"
         width="146"
@@ -36,6 +35,7 @@
           fill="#372865"
         />
       </svg>
+
       <div class="links">
         <ul>
           <li>Features</li>
@@ -58,7 +58,7 @@
           Build a highly engaged <br />
           community with no effort.
         </h1>
-        <!--Description about what Commune does-->
+
         <p class="about">
           Commune offers the tools you need to build a highly engaged community
           with little to no <br />
@@ -66,11 +66,13 @@
           from members to <br />
           content from one central dashboard.
         </p>
+
         <input
           class="email"
           type="email"
           placeholder="Enter your e-mail address"
         />
+
         <button class="join">Join Waitlist</button>
       </div>
       <img
@@ -78,11 +80,12 @@
         src="Assets/Illustration.png"
         width="350px"
         height="400px"
+        alt="logo"
       />
     </div>
 
     <p class="partners">Used by these companies:</p>
-    <!-- TODO: take off this breakpoint -->
+
     <!--Everything after this line is SVG code for image icons under used by companies heading.-->
 
     <svg
